# wafd-one

./: INSTALL_ON_FRAPPE_CLOUD.md  MANIFEST.in  README.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_10.0.0_RC1.md  RELEASE_NOTES_10.0.0_RC3.md  RELEASE_NOTES_10.0.0rc2.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.2.md  RELEASE_NOTES_2.2.0.md  RELEASE_NOTES_2.2.1.md  RELEASE_NOTES_2.2.2.md  RELEASE_NOTES_2.3.0.md  RELEASE_NOTES_2.3.1.md  RELEASE_NOTES_2.4.0.md  RELEASE_NOTES_2.4.1.md  RELEASE_NOTES_2.4.2.md  RELEASE_NOTES_2.4.3.md  RELEASE_NOTES_2.5.0.md  RELEASE_NOTES_2.6.0.md  RELEASE_NOTES_2.7.0.md  RELEASE_NOTES_2.8.0.md  RELEASE_NOTES_2.9.0.md  RELEASE_NOTES_3.0.0.md  RELEASE_NOTES_3.0.2.md  RELEASE_NOTES_3.1.0.md  RELEASE_NOTES_3.2.0.md  RELEASE_NOTES_3.3.0.md  RELEASE_NOTES_3.4.0.md  RELEASE_NOTES_3.5.0.md  RELEASE_NOTES_3.6.0.md  RELEASE_NOTES_3.7.0.md  RELEASE_NOTES_4.0.0.md  RELEASE_NOTES_4.0.1.md  RELEASE_NOTES_4.1.0.md  (+107 more)
data_templates/: recipes_reference_review.csv
patches/: v5_3_1.py
reference_data/: ingredients_master_v6_1_0.csv  madinah_hotels_master_v6_1_0.csv  recipes_master_v6_1_0.csv
scripts/: validate_patch_paths.py  validate_release.py
wafd_one/: MANIFEST.in  __init__.py  administration.py  api.py  costing.py  daily_planning.py  document_studio.py  executive.py  finance.py  food_safety.py  governance.py  hooks.py  install.py  master_data.py  operations.py  patches.txt  planning.py  production_health.py  pyproject.toml  quality.py  (+2 more)
(+289 files in other folders)
