[project]
name = "wafd_one"
version = "0.1.0"
description = "WAFD ONE catering and delivery operations app"
authors = [{ name = "Wafd Almadinah", email = "wafd.almadinah@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
